<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <!--tools:context="xpmxp1.tenderstar.Start">-->

    <Button
        android:id="@+id/bSignUp"
        android:text="@string/sign_up"
        android:textSize="18sp"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:background="@android:color/holo_blue_light"
        android:textColor="@android:color/white" />

    <Button
        android:id="@+id/bLogin"
        android:text="@string/login"
        android:textSize="18sp"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:textColor="@android:color/white"
        android:background="@android:color/holo_blue_light"
        />



</RelativeLayout>

